@@ -51,21 +51,17 @@
 #if HAVE_DIRENT_H
 # include <dirent.h>
 # define NAMLEN(dirent) strlen((dirent)->d_name)
-# undef CONFIG_NO_DIRECTORY
 #else
 # define dirent direct
 # define NAMLEN(dirent) (dirent)->d_namlen
 # if HAVE_SYS_NDIR_H
 #  include <sys/ndir.h>
-# undef CONFIG_NO_DIRECTORY
 # endif
 # if HAVE_SYS_DIR_H
 #  include <sys/dir.h>
-# undef CONFIG_NO_DIRECTORY
 # endif
 # if HAVE_NDIR_H
 #  include <ndir.h>
-# undef CONFIG_NO_DIRECTORY
 # endif
 #endif
 
